# TodoFastAPI-Scafholding

./: .dockerignore  .env.example  .gitignore  .mypy.ini  .pre-commit-config.yaml  Dockerfile  docker-compose.yaml  docker-compose.yml  main_example.py  mypy.ini  plan-01.md  plan.md  plan_made_by_me.md  pyproject.toml  pytest.ini  ruff.toml
app/: main.py
app/core/: config.py  logging.py  mongo.py  redis.py
app/models/: audit.py  base.py  enums.py  project.py  task.py  user.py
app/repositories/: __init__.py  audit.py  project.py  task.py  user.py
app/schemas/: audit.py  common.py  project.py  task.py  user.py
tests/: conftest.py
tests/e2e/: test_docker_compose.py
tests/integration/core/: test_integration_logging.py
tests/unit/core/: test_unit_logging.py
