[project]
name = "todoapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=5.0.0",
    "beanie>=2.0.0",
    "fastapi>=0.118.2",
    "motor>=3.7.1",
    "mypy>=1.18.2",
    "passlib>=1.7.4",
    "pre-commit>=4.3.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.11.0",
    "pyjwt>=2.10.1",
    "pytest>=8.4.2",
    "python-multipart>=0.0.20",
    "python-on-whales>=0.78.0",
    "redis>=6.4.0",
    "requests>=2.32.5",
    "ruff>=0.14.0",
    "types-requests>=2.32.4.20250913",
    "uvicorn>=0.37.0",
]
